# rust_chess_engine

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: .env  lib.rs
src/board/: conversion.rs  debug.rs  mailbox120.rs  mod.rs
src/bot/: config.rs  enginestate.rs  lichess.rs  mod.rs  test.rs  uci.rs  ucihandler.rs
src/evaluation/: mod.rs
src/evaluation/classical/: mod.rs  pst.rs
src/evaluation/neural/: evaluator.rs  feature.rs  mod.rs
src/movegen/: attack.rs  legal_move_filter.rs  mod.rs  move.rs  move_2.rs  pawn.rs  perft.rs  piece.rs  pin.rs  pseudo_legal_movegen.rs
src/nn_model/: mlp_structure.rs  mod.rs
src/position/: fen.rs  game.rs  mod.rs  position.rs  state.rs
src/search/: constants.rs  mod.rs  move_ordering.rs  searcher.rs  tt.rs
src/trainer_rust/: config.rs  dataset.rs  decode_fen.rs  mlp_structure.rs  mod.rs  train.rs  trainer_main.rs
src/uci/: mod.rs  ucihandler.rs
