[package]
name = "rust_chess_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1"
rand = "0.8"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }    
serde_json = "1.0"  
burn = { version = "0.20.0", features = [ "autodiff", "dataset" , "ndarray"] }

[features]
default = []
nn = []