[package]
name = "rust_chess_engine"  
version = "0.1.0"
edition = "2024"
default-run = "bot"


[dependencies]
once_cell = "1"
rand = "0.8"
anyhow = "1"

# Bot dependencies
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"

[features]
default = []
nn = []

# Binary for running the bot
[[bin]]
name = "bot"
path = "src/bin/bot.rs"

